--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,11 @@ a {
   }
   body {
     color: white;
-    background: black;
+    background: green;
   }
 }
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
